k8s-yamls/api-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: consul-api-gateway
  namespace: consul
spec:
  gatewayClassName: consul
  listeners:
  - protocol: HTTP # options: HTTP or HTTPS
    port: 80 # options: 80 or 443 or custom
    name: http
    allowedRoutes:
      namespaces:
        from: All # options: All or Same or <Specific>
    # tls:
    #   certificateRefs:
    #     - name: cert
    #       namespace: secret-namespace
    #       group: ""
    #       kind: Secret
---
## ReferenceGrants enable the Consul API Gateway to route traffic between different namespaces.
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: consul-reference-grant
  namespace: default # service namespace
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: consul # api-gw namespace
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
# HTTPRoute routes HTTP requests to backend services.
kind: HTTPRoute
metadata:
  name: route-hashicups
  namespace: consul
spec:
  # Defines the gateway listener.
  parentRefs:
  - name: consul-api-gateway
    namespace: consul
  # Rules define behaviors for network traffic that goes through the route.
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    # Defines the backend service.
    backendRefs:
    - kind: Service
      name: nginx
      namespace: default
      port: 80
